syntax = "proto3";
option java_multiple_files = true;

option java_package = "it.progetto.login.grpc";
package it.progetto.progetto_sdcc.proto;

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string user = 1;
}

message CheckRequest{
  string userId = 1;
}

message CheckResponse{
  bool isLogged = 1;
}

service LoginService {
  rpc login(LoginRequest) returns (LoginResponse);
  rpc signin(LoginRequest) returns (LoginResponse);
  rpc checkLogin(CheckRequest) returns (CheckResponse);
  rpc logOut(CheckRequest) returns (CheckResponse);
}
