syntax = "proto3";

option go_package = "api_gateway/proto";


service NotificationManager {
  rpc GetInvites(InviteInput) returns (InviteOutput);
}

//input: pathname del luogo
//output: json con informazioni --> {time=[...], temperature=[...], humidity=[...], cloud_cover=[...], precipitation=[...], wind_speed=[...]}

message InviteInput {
  string Username = 1;
}

message InviteOutput {
  string Invites = 1;
}
